--- a/docroot/modules/custom/verathon_customization/css/global.css
+++ b/docroot/modules/custom/verathon_customization/css/global.css
@@ -341,7 +341,7 @@ form:is(#user-login-form, #user-register-form, #user-pass, #search-form, #search
     text-indent: 0;
     font-weight: 600;
     padding: .25rem .625rem;
-    position: absolute;
+    position: relative;
     top: 0;
     right: 0;
 }
