--- a/docroot/modules/custom/verathon_customization/css/global.css
+++ b/docroot/modules/custom/verathon_customization/css/global.css
@@ -647,6 +647,7 @@ form.webform-submission-form div.form-actions {
 .ui-widget.ui-widget-content {
   width: 100% !important;
   max-width: 31.25rem;
+  z-index: 5000;
 }
 
 .ui-dialog .ui-dialog-titlebar {
